@@ -169,6 +169,9 @@ static int pkey_dsa_ctrl(EVP_PKEY_CTX *ctx, int type, int p1, void *p2)
 		dctx->md = p2;
 		return 1;
 
+		case EVP_PKEY_CTRL_PKCS7_SIGN:
+		return 1;
+
 		default:
 		return -2;
 
